# gdt

./: .flake8  .gitignore  CITATION.cff  GDICT_FILE_SPECIFICATION.md  GFF_Update_Guide.md  Makefile  README.md  environment.yaml  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci.yml  tag-release.yml
example/fungi_mit/: HE983611.1.gff3  JQ346808.1.gff3
example/fungi_mit/misc/: seed_TEMP_Symbol.txt
example/fungi_mit/misc/gdt/: Fungi_mit_stripped.gdict  TEMP_Description_01.gdict  TEMP_Mapping_01.gdict
example/fungi_mit_expected_result/: JQ346808.1.gff3  KX657746.1.gff3  NC_001224.1.gff3  NC_042229.1.gff3  NC_050344.1.gff3  fungi_mit.tsv
example/fungi_mit_expected_result/misc/: AN_missing_dbxref_GeneID.txt  feature_names.txt  feature_unks.txt  features_info.tsv  to_exclude_2.txt
example/fungi_mit_expected_result/misc/gdt/: Fungi_mit_pilot_01.gdict  Fungi_mit_pilot_02.gdict  Fungi_mit_pilot_03.gdict  Fungi_mit_pilot_04.gdict  Fungi_mit_pilot_05.gdict  Fungi_mit_pilot_06.gdict  TEMP_Symbol_01.gdict
example/fungi_mt/: KX657746.1.gff3  NC_001224.1.gff3  NC_042229.1.gff3  NC_066216.1.gff3  fungi_mt_stripped.gdt
example/fungi_mt/misc/: AN_missing_gene_dict.txt  feature_names.txt  feature_unks.txt  features_info.tsv  seed_TEMP_Symbol.txt  to_exclude.txt  to_exclude_2.txt  to_remove.txt  to_remove_2.txt
example/fungi_mt/misc/gdt/: TEMP_01.gdt  TEMP_Description_01.gdt  TEMP_Mapping_01.gdt  TEMP_Symbol_01.gdt  fungi_mt_pilot_01.gdt  fungi_mt_pilot_02.gdt  fungi_mt_pilot_03.gdt  fungi_mt_pilot_04.gdt  fungi_mt_pilot_05.gdt  fungi_mt_pilot_06.gdt  fungi_mt_pilot_07.gdt  fungi_mt_stripped.gdt
gdt/: __init__.py  cli.py  gdt.py  gene_dict.py  gff3_utils.py  logger_setup.py  tsv_filter.py
notebooks/: AN_missing_dbxref.ipynb  AN_missing_dbxref_GeneID.ipynb  AN_missing_gene_dict.ipynb  Auxiliary_processes.ipynb  TEMP_01.gdt  TEMP_02.gdt  gene_to_remove  optimization.ipynb  removal_of_annotations.ipynb
resources/gdicts/: fungi_mit.gdict  green_algae_mit.gdict  green_algae_plt.gdict  plants_mit.gdict  protists_mit.gdict
resources/stripped/: Green_Algae_mit_stripped.gdict  Green_Algae_plt_stripped.gdict  Metazoans_stripped.gdict  Plants_mit_stripped.gdict  Protists_mit_stripped.gdict  Protists_plt_stripped.gdict
src/gdt/: __init__.py  cli.py  gdict.py  gdt_impl.py  gene_dict.py  gene_dict_impl.py  gff3_utils.py  log_setup.py  logger_setup.py  tsv_filter.py
