[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdt"
version = "0.1.0"
description = "Gene Dictionary Tool - Bioinformatics package"
authors = [
    {name = "Breno Dupin", email = "breno.dupin@gmail.com"},
    {name = "Matheus Sanita Lima", email = "msanital@uwo.ca"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "pandas"
]

[project.urls]
Homepage = "https://--placeholder--"
Repository = "https://gitlab.com/brenodupin/gdt"

[project.scripts]
geneDict = "gdt.cli:cli_run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
# Line length - matching the flake8 config
line-length = 88

# Target Python versions (adjust based on your project)
target-version = ['py310', 'py311']

# Include and exclude patterns
include = '\.(pyi?|ipynb)$'

extend-exclude = '''
# Exclude the same directories as flake8 config
/(
    \.git
    | __pycache__
    | \.pytest_cache
    | \.tox
    | venv
    | env
    | \.venv
    | \.env
    | build
    | dist
    | \.egg-info
    | img
    | logs
    | reports
    | resources
    | sandbox
    | data
    | results
    | output
    | references
    | \.ipynb_checkpoints
    | \.Rproj\.user
)/
'''