[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdt"
version = "0.1.0"
description = "Gene Dictionary Tool - Bioinformatics package"
authors = [
    {name = "Breno Dupin", email = "breno.dupin@gmail.com"},
    {name = "Matheus Sanita Lima", email = "msanital@uwo.ca"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "pandas"
]

[project.urls]
Homepage = "https://--placeholder--"
Repository = "https://gitlab.com/brenodupin/gdt"

[project.scripts]
geneDict = "gdt.cli:cli_run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
# Line length - matching the flake8 config
line-length = 88

# Target Python versions (adjust based on your project)
target-version = ['py310', 'py311']

# Include and exclude patterns
include = '\.(pyi?|ipynb)$'

extend-exclude = '''
# Exclude the same directories as flake8 config
/(
    \.git
    | __pycache__
    | \.pytest_cache
    | \.tox
    | venv
    | env
    | \.venv
    | \.env
    | build
    | dist
    | \.egg-info
    | img
    | logs
    | reports
    | resources
    | sandbox
    | data
    | results
    | output
    | references
    | \.ipynb_checkpoints
    | \.Rproj\.user
)/
'''

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]

[tool.ruff]
# Maximum line length - bioinformatics often has longer lines due to file paths and complex expressions
line-length = 88

# Target Python version
target-version = "py310"

# Include and exclude patterns
include = ["*.py", "*.pyi", "*.ipynb"]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache", 
    ".tox",
    "venv",
    "env",
    ".venv",
    ".env",
    "build",
    "dist",
    "*.egg-info",
    # Common bioinformatics data directories
    "img",
    "logs", 
    "reports",
    "resources",
    "sandbox",
    "data",
    "results",
    "output",
    "references",
    # Jupyter notebook checkpoints
    ".ipynb_checkpoints",
    # R related files if you have mixed projects
    ".Rproj.user",
]

[tool.ruff.lint]
# Enable rules equivalent to flake8's E,W,F,C
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "C90", # mccabe complexity
]

# Maximum complexity for functions - bioinformatics can have complex algorithms
mccabe.max-complexity = 15

# Per-file ignores for specific patterns common in bioinformatics
[tool.ruff.lint.per-file-ignores]
# __init__.py files often have unused imports for convenience
"__init__.py" = ["F401", "F403"]
# Test files may have longer lines and unused imports
"test_*.py" = ["E501", "F401"]
"tests/*.py" = ["E501", "F401"]
# Scripts may have unused imports and longer lines
"scripts/*.py" = ["F401", "E501"]
# Jupyter notebooks have specific patterns - more lenient rules
"*.ipynb" = ["E501", "F401", "E402", "W292", "W291", "W293", "E302", "E305", "F821"]
"notebooks/*.ipynb" = ["E501", "F401", "E402", "W292", "W291", "W293", "E302", "E305", "F821"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# End files with a newline
skip-magic-trailing-comma = false
