[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdt"
dynamic = ["version"]
description = "Gene Dictionary Tool - Bioinformatics package"
authors = [
    {name = "Breno Dupin", email = "breno.dupin@gmail.com"},
    {name = "Matheus Sanita Lima", email = "msanital@uwo.ca"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.3,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/brenodupin/gdt"
Repository = "https://github.com/brenodupin/gdt"

[project.scripts]
gdt-cli = "gdt.cli:cli_run"

[tool.setuptools.dynamic]
version = {attr = "gdt.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "pandas-stubs>=2.2.3.250527",
    "black>=25.1.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true


[tool.black]
# Line length - matching the flake8 config
line-length = 88

# Target Python versions (adjust based on your project)
target-version = ['py310', 'py311']

# Include and exclude patterns
include = '\.(pyi?|ipynb)$'

extend-exclude = '''
# Exclude the same directories as flake8 config
/(
    \.git
    | __pycache__
    | \.pytest_cache
    | \.tox
    | venv
    | env
    | \.venv
    | \.env
    | build
    | dist
    | \.egg-info
    | img
    | logs
    | reports
    | resources
    | sandbox
    | data
    | results
    | output
    | references
    | \.ipynb_checkpoints
    | \.Rproj\.user
)/
'''
